Fixed some scaling issues on mobile

--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,13 @@
 body{
   font-family: 'Quicksand', sans-serif;
 }
+
 .title{
   text-align: left;
-  padding: 50px;
+  padding: 3vw;
   height: 70px;
+  font-size: 3vw;
+  position: relative;
 }
 
 .subheading{
@@ -31,26 +34,29 @@ body{
   height: 40px;
   margin-top: 20px;
 }
+.quote{
+  font-size: 50px;
+}
 /* Header image*/
 .header-container{
-  width: 100%;
-  height: 790px;
+  max-width: 100%;
+  height: 55vw;
   position: relative;
 }
 .nav-bar{
+  overflow: hidden;
   width: 100%;
-  height: 50px;
+  height: 5vw;
   position: relative;
 }
-
 .nav-bar li{
   list-style-type: none;
   overflow: hidden;
   float: left;
-  padding: 15px;
+  padding: 0.7vw;
   text-align: center;
-  margin-top: 7px;
-  font-size: 18px;
+  margin-top: 0.6vw;
+  font-size: 1.5vw;
   transition: background-color 0.5s ease;
   border-radius: 10px;
 }
@@ -61,40 +67,50 @@ body{
   border-radius: 10px;
 }
 
+.nav-bar-sticky{
+  position: fixed;
+  overflow: hidden;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  background-color: rgba(255, 250, 250, 0.6);
+}
+
 .social-media-bar{
   position: absolute;
   width: 50%;
-  height: 100%;
+  height: auto;
   margin-left: 48%;
 }
 
 .logo{
-  width: 50px;
-  padding: 10px;
+  width: 4vw;
+  padding: 1vw;
   transition: width 0.2s ease;
   float: right;
 }
 
 .logo:hover{
   margin-bottom: 0px;
-  width: 70px;
+  width: 5vw;
 }
 
 .header-name{
   margin-left: 25%;
-  margin-top: 20%;
+  margin-top: 15%;
   width: 50%;
+  max-width: 50%;
+  height: auto;
   padding: 15px;
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0.6);
   position: relative;
-
 }
 
 .header-name h1{
   font-family: 'Jura', sans-serif;
   text-align: center;
-  font-size: 60px;
+  font-size: 5vw;
   color: white;
 }
 
@@ -102,25 +118,27 @@ body{
   font-family: 'Quicksand', sans-serif;
   text-align: center;
   color: white;
-  font-size: 18px;
+  font-size: 1.75vw;
 }
 
 .header-image{
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;
   position: absolute;
 }
-
+/* TODO: Fix the readmore getting cut off on small devices */
 .read-more{
-  font-size: 12px;
+  font-size: 1vw;
   text-align: center;
   color: white;
+  display: block;
   position: relative;
-  margin-top: 180px;
+  margin-top: 15vw;
 }
 
 .arrows{
-  width: 5%;
+  width: 3vw;
 }
 
 .arrows:hover{
@@ -180,6 +198,7 @@ body{
   font-size: 24px;
   padding: 50px;
 }
+
 /* Technologies*/
 .technology-container{
   width: 100%;
